<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/nHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header"
            android:minHeight="48dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nKalkulasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nHeaderLayout">

        <LinearLayout
            android:id="@+id/nHitungan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nHarga"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nDiskon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nDiskon"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonInput"
                android:layout_marginTop="20dp"
                android:text="@string/nClear" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/nHeaderLayout">

            <TextView
                android:id="@+id/nHargaLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nHargaLayout"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nOverviewHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nRupiah"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nDiskonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nDiskonLayout"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/nOverviewDiskon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nRupiah"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>